--- a/deploy/site_template/index.html
+++ b/deploy/site_template/index.html
@@ -1,1 +1,43 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>SmartAI - The Future is Automated</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f4f4;
+      text-align: center;
+      padding: 50px;
+    }
+    .container {
+      background: white;
+      padding: 40px;
+      border-radius: 12px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      max-width: 600px;
+      margin: auto;
+    }
+    h1 {
+      color: #333;
+    }
+    p {
+      color: #555;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>SmartAI Assistant</h1>
+    <p>Test our new AI-driven assistant. No signup. No waitlist. Just results.</p>
+    <p><em>We are currently in beta. Thank you for your interest.</em></p>
+  </div>
 
+  <!-- A-Ads ad embed -->
+  <iframe data-aa='2394482' src='//acceptable.a-ads.com/2394482'
+    style='border:0px; padding:0; width:100%; height:100px; overflow:hidden; background-color: transparent;'>
+  </iframe>
+  <iframe data-aa='2394482' src='//acceptable.a-ads.com/2394482' style='border:0px; padding:0; width:100%; height:100%; overflow:hidden; background-color: transparent;'></iframe>
+</body>
+</html>
